[package]
name = "dhat"
version = "0.2.2"
authors = ["Nicholas Nethercote <n.nethercote@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A library for heap profiling and ad hoc profiling with DHAT."
readme = "README.md"
homepage = "https://github.com/nnethercote/dhat-rs"
repository = "https://github.com/nnethercote/dhat-rs"
keywords = ["profiling"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.55"
rustc-hash = "1.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2"

[dev-dependencies]
serial_test = "0.5"
