[package]
name = "dhat"
version = "0.3.3"
authors = ["Nicholas Nethercote <n.nethercote@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A library for heap profiling and ad hoc profiling with DHAT."
readme = "README.md"
homepage = "https://github.com/nnethercote/dhat-rs"
repository = "https://github.com/nnethercote/dhat-rs"
keywords = ["profiling"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.63"
mintex = "0.1.2"
rustc-hash = "1.1"
lazy_static = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2"

[dev-dependencies]
serial_test = "0.5"

# Some tests require debug info. `cargo test` enables debug info, but `cargo
# test --release` does not, so we enable it here. In Rust 1.56 and earlier,
# `profile.bench` was used for `cargo test --release`, but in Rust 1.57 this
# changed to `profile.release`. So we specify both.
[profile.bench]
debug = 1
[profile.release]
debug = 1
